networkpolicies/default-deny/deny-default-allow-dns.yaml
# Recusa todo o trafego de entrada e saída de todos os pods na namespace default
# mas faz a liberação do trafego para consultas DNS para poder validar ping entre pods utilizando o nome
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
  egress:
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
